Fix white space

--- a/assets/styles/app.less
+++ b/assets/styles/app.less
@@ -98,6 +98,7 @@ html, body {
 
 .markdown {
   font-size: 1.2rem;
+  white-space: pre-wrap;
 }
 
 .ui.main .grid .content .card {
